# College

./: README.md  pyproject.toml
Data Structure/IntroducingC/: Ex001.c  Ex002.c  Ex003.c
OOP/BigSoftware/: version1.py
Object Oriented Programming/VirtualPet/: VirtualPet.py  VirtualPetGui.py
Oriented Objects Programming/BigSoftware/: README.md  version1.py  version2.py  version3.py  version4.py  version5.py
Programming/Projects/CPFVerifier/: README.md
Projects/CPFVerifier/: funcoesCPF.py
Projects/ShuffleWords/: README.md
Projects/UrllibExercices/: MessageFunctions.py  README.md
