[tool.poetry]
name = "college"
version = "0.1.0"
description = ""
authors = ["Maria Fernanda Caetano"]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.6.2"
telebot = "^0.0.4"
numpy = "^1.24.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
